<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateContactAcitivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Name"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/number"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:hint="Number"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/name"/>

    <EditText
        android:id="@+id/primary"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="Primary Business"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/number"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:hint="Address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primary"/>

    <EditText
        android:id="@+id/province"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="Province"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"/>

    <Button
        android:id="@+id/submitButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="submitInfoButton"
        android:text="Create Contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
