<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Name"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="Number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/province"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:hint="Province"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/address"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:hint="Address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/primary"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:hint="Primary business"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:onClick="updateContact"
        android:text="Update Data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:onClick="eraseContact"
        android:text="Erase Contact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


</android.support.constraint.ConstraintLayout>
